[package]
name = "opentelemetry-nats"
version = "0.2.1"
description = "Convenience functions for propagating OpenTelemetry traces on NATS messages"
edition = "2024"

[dependencies]
async-nats = "0.42"
opentelemetry = { version = "0.23" }
opentelemetry_sdk = { version = "0.23", features = [
    "trace",
    "logs",
    "rt-tokio",
] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = { version = "0.24" }
